--- a/index.ipynb
+++ b/index.ipynb
@@ -419,12 +419,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "unique_countries = set(countries)\n",
-    "list(unique_countries)"
+    "unique_countries = list(unique_countries)"
    ]
   },
   {
