--- a/index.ipynb
+++ b/index.ipynb
@@ -472,7 +472,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_of_repeats = countr\n",
+    "num_of_repeats = countries.len() - unique_countries.len\n",
     "num_of_repeats # 3"
    ]
   },
